--- a/msg/src/main/resources/application.properties
+++ b/msg/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/tseam_six_3
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=konnos1987
 spring.data.rest.base-path=/e-personal
