--- a/msg/src/main/resources/application.properties
+++ b/msg/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/tseam_six_3
 spring.datasource.username=root
-spring.datasource.password=konnos1987
+spring.datasource.password=theo2512
 spring.data.rest.base-path=/e-personal
 
 spring.mail.host=smtp.gmail.com
