--- a/msg/src/main/resources/application.properties
+++ b/msg/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/tseam_six_3
 spring.datasource.username=root
-spring.datasource.password=konnos1987
+spring.datasource.password=theo2512
 spring.data.rest.base-path=/e-personal
 
 spring.mail.host=smtp.gmail.com
@@ -9,3 +9,19 @@ spring.mail.username=<login user to smtp server>
 spring.mail.password=<login password to smtp server>
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+## MULTIPART (MultipartProperties)
+# Enable multipart uploads
+spring.servlet.multipart.enabled=true
+# Threshold after which files are written to disk.
+spring.servlet.multipart.file-size-threshold=2KB
+# Max file size.
+spring.servlet.multipart.max-file-size=1000MB
+# Max Request Size
+spring.servlet.multipart.max-request-size=215MB
+
+## File Storage Properties
+# All files uploaded through the REST API will be stored in this directory
+#an deis mesa sto msg sto backend exei dimiourgithei enas fakelos uploads ekei apothikevontai oi fwtos]
+#kai sto upload an deis ston postman  epistrefetai ena antikeimeno json pou exei mesa ena key  "fileDownloadUri" pou einai ena link pou auyto to link mpainei sti vasi
+file.upload-dir=./uploads
