Changed some controllers

--- a/msg/src/main/resources/application.properties
+++ b/msg/src/main/resources/application.properties
@@ -4,11 +4,11 @@ spring.datasource.password=konnos1987
 spring.data.rest.base-path=/e-personal
 
 spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=<login user to smtp server>
-spring.mail.password=<login password to smtp server>
+spring.mail.port=465
+spring.mail.username=info.healthbeat@gmail.com
+spring.mail.password=healthbeat2019
 spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.enable=false
 
 ## MULTIPART (MultipartProperties)
 # Enable multipart uploads
